# nilearn_out_of_brain_peaks_demo

./: .gitignore  LICENSE  README.md  debug_mask.py  pyproject.toml  recommended_snippet.py  reproduce.py  template_mismatch_demo.py  test_template_mismatch.py
src/nilearn_oob/: brain_mask.py  data.py  figures.py  glm.py  masks.py  peaks.py  pipeline.py
tests/: conftest.py  test_brain_mask.py  test_data.py  test_figures.py  test_glm.py  test_mask_img_pitfalls.py  test_masking_behavior.py  test_masks.py  test_peaks.py  test_pipeline.py
