[project]
name = "nilearn_oob"
version = "0.1.0"
description = "Demonstration of out-of-brain peaks in nilearn get_clusters_table and the masking fix"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "nilearn>=0.10",
    "pandas",
    "matplotlib",
    "numpy",
    "nibabel",
    "scipy<1.17",
    "templateflow",
]

[dependency-groups]
test = ["pytest"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
